[gd_scene load_steps=3 format=3 uid="uid://7j4hs46rvcl1"]

[ext_resource type="Theme" uid="uid://dwa6p1oymk4qf" path="res://assets/theme/default_theme.tres" id="1_41k3b"]
[ext_resource type="Script" uid="uid://bhvg8bxgv40w0" path="res://scripts/scene/pause_menu.gd" id="2_0s8y0"]

[node name="pause_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
theme = ExtResource("1_41k3b")
script = ExtResource("2_0s8y0")

[node name="ColorScreen" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00392157, 0.811765, 0.447059, 1)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 8

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "PAUSED"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Resume"

[node name="master" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Master Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="master_volume" type="HSlider" parent="GridContainer"]
layout_mode = 2
max_value = 6.0
step = 0.5

[node name="bgm" type="Label" parent="GridContainer"]
layout_mode = 2
text = "BackGround Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="bgm_volume" type="HSlider" parent="GridContainer"]
layout_mode = 2
max_value = 6.0
step = 0.5

[node name="effect" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Effect Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="effect_volume" type="HSlider" parent="GridContainer"]
layout_mode = 2
max_value = 6.0
step = 0.5

[node name="player" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Player Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="player_volume" type="HSlider" parent="GridContainer"]
layout_mode = 2
max_value = 6.0
step = 0.5

[node name="enemy" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Enemy Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="enemy_volume" type="HSlider" parent="GridContainer"]
layout_mode = 2
max_value = 6.0
step = 0.5

[node name="Quit" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="GridContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="value_changed" from="GridContainer/master_volume" to="." method="_on_master_volume_value_changed"]
[connection signal="value_changed" from="GridContainer/bgm_volume" to="." method="_on_bgm_volume_value_changed"]
[connection signal="value_changed" from="GridContainer/effect_volume" to="." method="_on_effect_volume_value_changed"]
[connection signal="value_changed" from="GridContainer/player_volume" to="." method="_on_player_volume_value_changed"]
[connection signal="value_changed" from="GridContainer/enemy_volume" to="." method="_on_enemy_volume_2_value_changed"]
[connection signal="pressed" from="GridContainer/Quit" to="." method="_on_quit_pressed"]
